qt6/multimedia/gen_qmediarecorder.nim


proc fcQMediaRecorder_new(): ptr cQMediaRecorder {.importc: "QMediaRecorder_new".}
proc fcQMediaRecorder_new2(parent: pointer): ptr cQMediaRecorder {.importc: "QMediaRecorder_new2".}
proc fcQMediaRecorder_metaObject(self: pointer, ): pointer {.importc: "QMediaRecorder_metaObject".}
proc fcQMediaRecorder_metacast(self: pointer, param1: cstring): pointer {.importc: "QMediaRecorder_metacast".}
proc fcQMediaRecorder_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QMediaRecorder_metacall".}
proc fcQMediaRecorder_tr(s: cstring): struct_miqt_string {.importc: "QMediaRecorder_tr".}
proc fcQMediaRecorder_isAvailable(self: pointer, ): bool {.importc: "QMediaRecorder_isAvailable".}
proc fcQMediaRecorder_outputLocation(self: pointer, ): pointer {.importc: "QMediaRecorder_outputLocation".}
proc fcQMediaRecorder_setOutputLocation(self: pointer, location: pointer): void {.importc: "QMediaRecorder_setOutputLocation".}
proc fcQMediaRecorder_actualLocation(self: pointer, ): pointer {.importc: "QMediaRecorder_actualLocation".}
proc fcQMediaRecorder_recorderState(self: pointer, ): cint {.importc: "QMediaRecorder_recorderState".}
proc fcQMediaRecorder_error(self: pointer, ): cint {.importc: "QMediaRecorder_error".}
proc fcQMediaRecorder_errorString(self: pointer, ): struct_miqt_string {.importc: "QMediaRecorder_errorString".}
proc fcQMediaRecorder_duration(self: pointer, ): clonglong {.importc: "QMediaRecorder_duration".}
proc fcQMediaRecorder_mediaFormat(self: pointer, ): pointer {.importc: "QMediaRecorder_mediaFormat".}
proc fcQMediaRecorder_setMediaFormat(self: pointer, format: pointer): void {.importc: "QMediaRecorder_setMediaFormat".}
proc fcQMediaRecorder_encodingMode(self: pointer, ): cint {.importc: "QMediaRecorder_encodingMode".}
proc fcQMediaRecorder_setEncodingMode(self: pointer, encodingMode: cint): void {.importc: "QMediaRecorder_setEncodingMode".}
proc fcQMediaRecorder_quality(self: pointer, ): cint {.importc: "QMediaRecorder_quality".}
proc fcQMediaRecorder_setQuality(self: pointer, quality: cint): void {.importc: "QMediaRecorder_setQuality".}
proc fcQMediaRecorder_videoResolution(self: pointer, ): pointer {.importc: "QMediaRecorder_videoResolution".}
proc fcQMediaRecorder_setVideoResolution(self: pointer, videoResolution: pointer): void {.importc: "QMediaRecorder_setVideoResolution".}
proc fcQMediaRecorder_setVideoResolution2(self: pointer, width: cint, height: cint): void {.importc: "QMediaRecorder_setVideoResolution2".}
proc fcQMediaRecorder_videoFrameRate(self: pointer, ): float64 {.importc: "QMediaRecorder_videoFrameRate".}
proc fcQMediaRecorder_setVideoFrameRate(self: pointer, frameRate: float64): void {.importc: "QMediaRecorder_setVideoFrameRate".}
proc fcQMediaRecorder_videoBitRate(self: pointer, ): cint {.importc: "QMediaRecorder_videoBitRate".}
proc fcQMediaRecorder_setVideoBitRate(self: pointer, bitRate: cint): void {.importc: "QMediaRecorder_setVideoBitRate".}
proc fcQMediaRecorder_audioBitRate(self: pointer, ): cint {.importc: "QMediaRecorder_audioBitRate".}
proc fcQMediaRecorder_setAudioBitRate(self: pointer, bitRate: cint): void {.importc: "QMediaRecorder_setAudioBitRate".}
proc fcQMediaRecorder_audioChannelCount(self: pointer, ): cint {.importc: "QMediaRecorder_audioChannelCount".}
proc fcQMediaRecorder_setAudioChannelCount(self: pointer, channels: cint): void {.importc: "QMediaRecorder_setAudioChannelCount".}
proc fcQMediaRecorder_audioSampleRate(self: pointer, ): cint {.importc: "QMediaRecorder_audioSampleRate".}
proc fcQMediaRecorder_setAudioSampleRate(self: pointer, sampleRate: cint): void {.importc: "QMediaRecorder_setAudioSampleRate".}
proc fcQMediaRecorder_metaData(self: pointer, ): pointer {.importc: "QMediaRecorder_metaData".}
proc fcQMediaRecorder_setMetaData(self: pointer, metaData: pointer): void {.importc: "QMediaRecorder_setMetaData".}
proc fcQMediaRecorder_addMetaData(self: pointer, metaData: pointer): void {.importc: "QMediaRecorder_addMetaData".}
proc fcQMediaRecorder_captureSession(self: pointer, ): pointer {.importc: "QMediaRecorder_captureSession".}
proc fcQMediaRecorder_record(self: pointer, ): void {.importc: "QMediaRecorder_record".}
proc fcQMediaRecorder_pause(self: pointer, ): void {.importc: "QMediaRecorder_pause".}
proc fcQMediaRecorder_stop(self: pointer, ): void {.importc: "QMediaRecorder_stop".}
proc fcQMediaRecorder_recorderStateChanged(self: pointer, state: cint): void {.importc: "QMediaRecorder_recorderStateChanged".}
proc fQMediaRecorder_connect_recorderStateChanged(self: pointer, slot: int) {.importc: "QMediaRecorder_connect_recorderStateChanged".}
proc fcQMediaRecorder_durationChanged(self: pointer, duration: clonglong): void {.importc: "QMediaRecorder_durationChanged".}
proc fQMediaRecorder_connect_durationChanged(self: pointer, slot: int) {.importc: "QMediaRecorder_connect_durationChanged".}
proc fcQMediaRecorder_actualLocationChanged(self: pointer, location: pointer): void {.importc: "QMediaRecorder_actualLocationChanged".}
proc fQMediaRecorder_connect_actualLocationChanged(self: pointer, slot: int) {.importc: "QMediaRecorder_connect_actualLocationChanged".}
proc fcQMediaRecorder_encoderSettingsChanged(self: pointer, ): void {.importc: "QMediaRecorder_encoderSettingsChanged".}
proc fQMediaRecorder_connect_encoderSettingsChanged(self: pointer, slot: int) {.importc: "QMediaRecorder_connect_encoderSettingsChanged".}
proc fcQMediaRecorder_errorOccurred(self: pointer, error: cint, errorString: struct_miqt_string): void {.importc: "QMediaRecorder_errorOccurred".}
proc fQMediaRecorder_connect_errorOccurred(self: pointer, slot: int) {.importc: "QMediaRecorder_connect_errorOccurred".}
proc fcQMediaRecorder_errorChanged(self: pointer, ): void {.importc: "QMediaRecorder_errorChanged".}
proc fQMediaRecorder_connect_errorChanged(self: pointer, slot: int) {.importc: "QMediaRecorder_connect_errorChanged".}
proc fcQMediaRecorder_metaDataChanged(self: pointer, ): void {.importc: "QMediaRecorder_metaDataChanged".}
proc fQMediaRecorder_connect_metaDataChanged(self: pointer, slot: int) {.importc: "QMediaRecorder_connect_metaDataChanged".}
proc fcQMediaRecorder_mediaFormatChanged(self: pointer, ): void {.importc: "QMediaRecorder_mediaFormatChanged".}
proc fQMediaRecorder_connect_mediaFormatChanged(self: pointer, slot: int) {.importc: "QMediaRecorder_connect_mediaFormatChanged".}
proc fcQMediaRecorder_encodingModeChanged(self: pointer, ): void {.importc: "QMediaRecorder_encodingModeChanged".}
proc fQMediaRecorder_connect_encodingModeChanged(self: pointer, slot: int) {.importc: "QMediaRecorder_connect_encodingModeChanged".}
proc fcQMediaRecorder_qualityChanged(self: pointer, ): void {.importc: "QMediaRecorder_qualityChanged".}
proc fQMediaRecorder_connect_qualityChanged(self: pointer, slot: int) {.importc: "QMediaRecorder_connect_qualityChanged".}
proc fcQMediaRecorder_videoResolutionChanged(self: pointer, ): void {.importc: "QMediaRecorder_videoResolutionChanged".}
proc fQMediaRecorder_connect_videoResolutionChanged(self: pointer, slot: int) {.importc: "QMediaRecorder_connect_videoResolutionChanged".}
proc fcQMediaRecorder_videoFrameRateChanged(self: pointer, ): void {.importc: "QMediaRecorder_videoFrameRateChanged".}
proc fQMediaRecorder_connect_videoFrameRateChanged(self: pointer, slot: int) {.importc: "QMediaRecorder_connect_videoFrameRateChanged".}
proc fcQMediaRecorder_videoBitRateChanged(self: pointer, ): void {.importc: "QMediaRecorder_videoBitRateChanged".}
proc fQMediaRecorder_connect_videoBitRateChanged(self: pointer, slot: int) {.importc: "QMediaRecorder_connect_videoBitRateChanged".}
proc fcQMediaRecorder_audioBitRateChanged(self: pointer, ): void {.importc: "QMediaRecorder_audioBitRateChanged".}
proc fQMediaRecorder_connect_audioBitRateChanged(self: pointer, slot: int) {.importc: "QMediaRecorder_connect_audioBitRateChanged".}
proc fcQMediaRecorder_audioChannelCountChanged(self: pointer, ): void {.importc: "QMediaRecorder_audioChannelCountChanged".}
proc fQMediaRecorder_connect_audioChannelCountChanged(self: pointer, slot: int) {.importc: "QMediaRecorder_connect_audioChannelCountChanged".}
proc fcQMediaRecorder_audioSampleRateChanged(self: pointer, ): void {.importc: "QMediaRecorder_audioSampleRateChanged".}
proc fQMediaRecorder_connect_audioSampleRateChanged(self: pointer, slot: int) {.importc: "QMediaRecorder_connect_audioSampleRateChanged".}
proc fcQMediaRecorder_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QMediaRecorder_tr2".}
proc fcQMediaRecorder_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QMediaRecorder_tr3".}
proc fQMediaRecorder_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QMediaRecorder_virtualbase_metacall".}
proc fcQMediaRecorder_override_virtual_metacall(self: pointer, slot: int) {.importc: "QMediaRecorder_override_virtual_metacall".}
proc fQMediaRecorder_virtualbase_event(self: pointer, event: pointer): bool{.importc: "QMediaRecorder_virtualbase_event".}
proc fcQMediaRecorder_override_virtual_event(self: pointer, slot: int) {.importc: "QMediaRecorder_override_virtual_event".}
proc fQMediaRecorder_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QMediaRecorder_virtualbase_eventFilter".}
proc fcQMediaRecorder_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QMediaRecorder_override_virtual_eventFilter".}
proc fQMediaRecorder_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QMediaRecorder_virtualbase_timerEvent".}
proc fcQMediaRecorder_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QMediaRecorder_override_virtual_timerEvent".}
proc fQMediaRecorder_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QMediaRecorder_virtualbase_childEvent".}
proc fcQMediaRecorder_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QMediaRecorder_override_virtual_childEvent".}
proc fQMediaRecorder_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QMediaRecorder_virtualbase_customEvent".}
proc fcQMediaRecorder_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QMediaRecorder_override_virtual_customEvent".}
proc fQMediaRecorder_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QMediaRecorder_virtualbase_connectNotify".}
proc fcQMediaRecorder_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QMediaRecorder_override_virtual_connectNotify".}
proc fQMediaRecorder_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QMediaRecorder_virtualbase_disconnectNotify".}
proc fcQMediaRecorder_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QMediaRecorder_override_virtual_disconnectNotify".}
proc fcQMediaRecorder_delete(self: pointer) {.importc: "QMediaRecorder_delete".}


func init*(T: type QMediaRecorder, h: ptr cQMediaRecorder): QMediaRecorder =
  T(h: h)
proc create*(T: type QMediaRecorder, ): QMediaRecorder =

  QMediaRecorder.init(fcQMediaRecorder_new())
proc create*(T: type QMediaRecorder, parent: gen_qobject.QObject): QMediaRecorder =

  QMediaRecorder.init(fcQMediaRecorder_new2(parent.h))
proc metaObject*(self: QMediaRecorder, ): gen_qobjectdefs.QMetaObject =

  gen_qobjectdefs.QMetaObject(h: fcQMediaRecorder_metaObject(self.h))

proc metacast*(self: QMediaRecorder, param1: cstring): pointer =

  fcQMediaRecorder_metacast(self.h, param1)

proc metacall*(self: QMediaRecorder, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint =

  fcQMediaRecorder_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type QMediaRecorder, s: cstring): string =

  let v_ms = fcQMediaRecorder_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc isAvailable*(self: QMediaRecorder, ): bool =

  fcQMediaRecorder_isAvailable(self.h)
